--- a/pset4/PSET-4 - Managing Data Excercise 2.ipynb
+++ b/pset4/PSET-4 - Managing Data Excercise 2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "id": "a8464d6c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 39,
    "id": "327c0e96",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_1123/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_1119/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"nj_teachers_salaries_pset4.csv\")\n"
      ]
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "id": "0cf108bd",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 41,
    "id": "5171405b-8861-4e0e-a7d6-b8a6d6b362cb",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 42,
    "id": "8b389199-e49c-4bf1-8c04-7638cf18aef4",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "id": "032eab69-ce70-490b-9655-4d3b3f7100db",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "id": "13a48ba9-1a68-4397-9003-9c5f20f1042f",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 45,
    "id": "500d6894",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 46,
    "id": "32179431-d275-4c55-87fd-8c4617ab6a30",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "id": "75a36ec1",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "id": "c0e21809-3609-40a0-9178-481a5826024c",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "id": "5f8858c1",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 50,
    "id": "f2ee3ab4-4f36-42eb-a3d5-a440e28082cf",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 51,
    "id": "08c11dbc-3ef5-4cfe-959e-b4236d5a37e1",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 52,
    "id": "9e277b5b-f270-419c-b10c-b3fc92317c58",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 53,
    "id": "c312c0e9-dc91-4da4-a1b1-ae34f803e34b",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 54,
    "id": "bad33d62",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 55,
    "id": "8c6c91e3",
    "metadata": {},
    "outputs": [],
@@ -1585,31 +1585,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 56,
    "id": "0aa0e7ac",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[87], line 8\u001b[0m\n\u001b[1;32m      1\u001b[0m mydb \u001b[38;5;241m=\u001b[39m sq\u001b[38;5;241m.\u001b[39mconnect(\n\u001b[1;32m      2\u001b[0m     host\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocalhost\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m     user\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mroot\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      4\u001b[0m     password\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124midp/dt=[H,p]\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m     allow_local_infile\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, \n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      7\u001b[0m mycursor \u001b[38;5;241m=\u001b[39m mydb\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[0;32m----> 8\u001b[0m mycursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCREATE DATABASE IF NOT EXISTS nj_state_teachers_salaries\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m mycursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUSE nj_state_teachers_salaries\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/cursor.py:748\u001b[0m, in \u001b[0;36mMySQLCursor.execute\u001b[0;34m(self, operation, params, multi)\u001b[0m\n\u001b[1;32m    745\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_execute_iter(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_connection\u001b[38;5;241m.\u001b[39mcmd_query_iter(stmt))\n\u001b[1;32m    747\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 748\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_result(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_connection\u001b[38;5;241m.\u001b[39mcmd_query(stmt))\n\u001b[1;32m    749\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InterfaceError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    750\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_connection\u001b[38;5;241m.\u001b[39mhave_next_result:\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/opentelemetry/context_propagation.py:102\u001b[0m, in \u001b[0;36mwith_context_propagation.<locals>.wrapper\u001b[0;34m(cnx, *args, **kwargs)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Context propagation decorator.\"\"\"\u001b[39;00m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m OTEL_ENABLED \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cnx\u001b[38;5;241m.\u001b[39motel_context_propagation:\n\u001b[0;32m--> 102\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m method(cnx, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    104\u001b[0m current_span \u001b[38;5;241m=\u001b[39m trace\u001b[38;5;241m.\u001b[39mget_current_span()\n\u001b[1;32m    105\u001b[0m tp_header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/connection.py:861\u001b[0m, in \u001b[0;36mMySQLConnection.cmd_query\u001b[0;34m(self, query, raw, buffered, raw_as_string)\u001b[0m\n\u001b[1;32m    859\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mbytes\u001b[39m(packet)\n\u001b[1;32m    860\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 861\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_handle_result(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_send_cmd(ServerCmd\u001b[38;5;241m.\u001b[39mQUERY, query))\n\u001b[1;32m    862\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ProgrammingError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    863\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m err\u001b[38;5;241m.\u001b[39merrno \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3948\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading local data is disabled\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m err\u001b[38;5;241m.\u001b[39mmsg:\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/connection.py:480\u001b[0m, in \u001b[0;36mMySQLConnection._send_cmd\u001b[0;34m(self, command, argument, packet_number, packet, expect_response, compressed_packet_number)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    478\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m OperationalError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMySQL Connection not available\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m--> 480\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_socket\u001b[38;5;241m.\u001b[39mrecv() \u001b[38;5;28;01mif\u001b[39;00m expect_response \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/network.py:637\u001b[0m, in \u001b[0;36mMySQLSocket.recv\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    635\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrecv\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbytearray\u001b[39m:\n\u001b[1;32m    636\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Get packet from the MySQL server comm channel.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 637\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_netbroker\u001b[38;5;241m.\u001b[39mrecv(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msock, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maddress)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/network.py:229\u001b[0m, in \u001b[0;36mNetworkBrokerPlain.recv\u001b[0;34m(self, sock, address)\u001b[0m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Receive `one` packet from the MySQL server.\"\"\"\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;66;03m# Read the header of the MySQL packet\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m     header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_recv_chunk(sock, size\u001b[38;5;241m=\u001b[39mPACKET_HEADER_LENGTH)\n\u001b[1;32m    231\u001b[0m     \u001b[38;5;66;03m# Pull the payload length and sequence id\u001b[39;00m\n\u001b[1;32m    232\u001b[0m     payload_len, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pktnr \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    233\u001b[0m         struct\u001b[38;5;241m.\u001b[39munpack(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m<I\u001b[39m\u001b[38;5;124m\"\u001b[39m, header[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\x00\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m    234\u001b[0m         header[\u001b[38;5;241m3\u001b[39m],\n\u001b[1;32m    235\u001b[0m     )\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/mysql/connector/network.py:174\u001b[0m, in \u001b[0;36mNetworkBrokerPlain._recv_chunk\u001b[0;34m(self, sock, size)\u001b[0m\n\u001b[1;32m    172\u001b[0m pkt_view \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmemoryview\u001b[39m(pkt)\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m size:\n\u001b[0;32m--> 174\u001b[0m     read \u001b[38;5;241m=\u001b[39m sock\u001b[38;5;241m.\u001b[39mrecv_into(pkt_view, size)\n\u001b[1;32m    175\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m read \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m size \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    176\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InterfaceError(errno\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2013\u001b[39m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/ssl.py:1251\u001b[0m, in \u001b[0;36mSSLSocket.recv_into\u001b[0;34m(self, buffer, nbytes, flags)\u001b[0m\n\u001b[1;32m   1247\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m flags \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m   1248\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1249\u001b[0m           \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnon-zero flags not allowed in calls to recv_into() on \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m\n\u001b[1;32m   1250\u001b[0m           \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m)\n\u001b[0;32m-> 1251\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread(nbytes, buffer)\n\u001b[1;32m   1252\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1253\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mrecv_into(buffer, nbytes, flags)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/ssl.py:1103\u001b[0m, in \u001b[0;36mSSLSocket.read\u001b[0;34m(self, len, buffer)\u001b[0m\n\u001b[1;32m   1101\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1102\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m buffer \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1103\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sslobj\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;28mlen\u001b[39m, buffer)\n\u001b[1;32m   1104\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1105\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sslobj\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;28mlen\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mydb = sq.connect(\n",
     "    host=\"localhost\",\n",
@@ -1624,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "e3123aa5",
    "metadata": {},
    "outputs": [],
@@ -1656,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "a9c02aa0",
    "metadata": {},
    "outputs": [],
@@ -1668,24 +1647,8 @@
     "INTO TABLE teachers_salaries_pset4\n",
     "FIELDS TERMINATED BY ','\n",
     "OPTIONALLY ENCLOSED BY '\"'\n",
-    "LINES TERMINATED BY '\\\\\\\\'\n",
-    "IGNORE 1 LINES\n",
-    "(id,\n",
-    "last_name,\n",
-    "first_name,\n",
-    "county,\n",
-    "district,\n",
-    "school,\n",
-    "primary_job,\n",
-    "fte,\n",
-    "salary,\n",
-    "certificate,\n",
-    "subcategory,\n",
-    "teaching_route,\n",
-    "highly_qualified,experience_district,\n",
-    "experience_nj,\n",
-    "experience_total\n",
-    ")\n",
+    "LINES TERMINATED BY '\\n'\n",
+    "IGNORE 1 LINES;\n",
     "\"\"\"\n",
     "mycursor.execute(load_data)\n",
     "mydb.commit()"
@@ -1693,19 +1656,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 59,
    "id": "262fc1e9-46f9-46e4-a636-e9a726e1b0f3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[68], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m mycursor\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSELECT COUNT(*) FROM teachers_salaries_pset4\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNumber of rows in table: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmycursor\u001b[38;5;241m.\u001b[39mfetchone()[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows in table: 99959\n"
      ]
     }
    ],
@@ -1736,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 60,
    "id": "4c84b407",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1703,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows in teachers_salaries table : 99954\n"
+      "Number of rows in teachers_salaries table : 99959\n"
      ]
     }
    ],
@@ -1759,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "a9f8d503",
    "metadata": {},
    "outputs": [
@@ -1846,11 +1805,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "b0dd4a04",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mycursor.execute(\"USE nj_state_teachers_salaries\")\n",
+    "sample_outfile_path = \"/Users/alf/Documents/VS Code/pset4/sample.csv\" \n",
+    "\n",
+    "query_random_sample = f\"\"\"\n",
+    "SELECT \n",
+    "    'id',\n",
+    "    'first_name',\n",
+    "    'last_name',\n",
+    "    'primary_job',\n",
+    "    'experience_total',\n",
+    "    'experience_district',\n",
+    "    'experience_current_job',\n",
+    "    'salary',\n",
+    "    'days_worked',\n",
+    "    'teaching_route',\n",
+    "    'subcategory'\n",
+    "UNION ALL\n",
+    "SELECT\n",
+    "    id,\n",
+    "    first_name,\n",
+    "    last_name,\n",
+    "    primary_job,\n",
+    "    experience_total,\n",
+    "    experience_district,\n",
+    "    experience_current_job,\n",
+    "    salary,\n",
+    "    days_worked,\n",
+    "    teaching_route,\n",
+    "    subcategory\n",
+    "FROM teachers_salaries_pset4\n",
+    "ORDER BY RAND(7)\n",
+    "LIMIT 777\n",
+    "INTO OUTFILE '{sample_outfile_path}'\n",
+    "FIELDS TERMINATED BY ','\n",
+    "OPTIONALLY ENCLOSED BY '\"'\n",
+    "LINES TERMINATED BY '\\\\n';\n",
+    "\"\"\"\n",
+    "\n",
+    "with open(\"output.sql\", \"w\") as f:\n",
+    "    f.write(query_random_sample)"
+   ]
   },
   {
    "cell_type": "markdown",
